force-app/main/default/objects/Asset/fields/External_Id__c.field-meta.xml
<CustomField>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>