force-app/main/default/objects/Asset/fields/Release__c.field-meta.xml
<CustomField>
        <fullName>Release__c</fullName>
        <inlineHelpText>Firmware</inlineHelpText>
        <label>Release</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>